--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@react-email/components": "^0.0.25",
+    "@react-email/render": "^1.0.1",
+    "@sendgrid/mail": "^8.1.3",
+    "i18next": "^23.15.1",
     "next": "14.2.7",
+    "next-i18next": "^15.3.1",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.1",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
