--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/itim": "^5.1.0",
     "@heroicons/react": "^1.0.6",
     "@react-email/components": "^0.0.25",
     "@react-email/render": "^1.0.1",
