--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-email/components": "^0.0.25",
     "@react-email/render": "^1.0.1",
     "@sendgrid/mail": "^8.1.3",
+    "framer-motion": "^11.13.1",
     "i18next": "^23.15.1",
     "next": "14.2.7",
     "next-i18next": "^15.3.1",
